--- a/pom.xml
+++ b/pom.xml
@@ -75,7 +75,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <schemaDirectory>${project.basedir}/src/main/resources/</schemaDirectory>
+                    <schemaDirectory>${project.basedir}/src/main/resources/soap</schemaDirectory>
                     <outputDirectory>${project.basedir}/src/main/java</outputDirectory>
                     <clearOutputDir>false</clearOutputDir>
                 </configuration>
